# dialog_system_and_agents_support_materials

./: README.md
1/: README.md
2/: README.md
3/: README.md
4/: README.md
4/ds_services/: README.md  compose.base.yaml  compose.deploy.yaml  compose.dev.yaml  compose.proxy.yaml  pyproject.toml  test.py
4/ds_services/common_packages/services_api/: pyproject.toml
4/ds_services/common_packages/services_api/services_api/: gigachat.py  intent_catcher.py  machine_translation.py  remote.py
4/ds_services/services/gigachat/: Dockerfile  app.py  pyproject.toml  test_app.py
4/ds_services/services/gigachat/src/: langchain_api.py
4/ds_services/services/gigachat/tests/: data.py
4/ds_services/services/intent_catcher/: .env  Dockerfile  app.py  pyproject.toml  test_app.py
4/ds_services/services/intent_catcher/dataset/: direct_commands.json  extended_commands.json  flow_selection.json
4/ds_services/services/intent_catcher/src/: bge_intent_classifier.py  data_preparation.py  langchain_api.py  rule_intent_classifier.py  vector_store.py
4/ds_services/services/intent_catcher/tests/: data.py  response_comparator.py
4/ds_services/services/llm_llama3/: Dockerfile  README.md  app.py  pyproject.toml  test_app.py
4/ds_services/services/llm_llama3/src/: utils.py
4/ds_services/services/llm_llama3/tests/: data.py  prompts.py  response_comparators.py
4/ds_services/services/machine_translation/: Dockerfile  app.py  pyproject.toml  test_app.py
4/ds_services/services/machine_translation/src/: langchain_api.py  translator.py
4/ds_services/services/machine_translation/tests/: data.py  response_comparators.py
4/ds_services/services/proxy/: Dockerfile  default.conf.template
5/: README.md
5/chatsky_tutorials/: pyproject.toml
