[tool.poetry]
name = "ds_services"
version = "0.1.0"
description = ""
authors = ["Denis Kuznetsov <kunetsov.den.p@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
services-api = { path = "common_packages/services_api", develop = true }
pytest = "^8.3.2"
pydantic-settings = "^2.4.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
