[tool.poetry]
name = "services_api"
version = "0.1.0"
description = ""
authors = ["Denis Kuznetsov <kunetsov.den.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
langchain = "^0.2.14"
langserve = "^0.2.2"
sse-starlette = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
