[tool.poetry]
name = "llm_llama3"
version = "0.1.0"
description = ""
authors = ["Denis Kuznetsov <kunetsov.den.p@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = {version = "^0.2.87", source = "llama-cpp-cuda-12.4"}
langserve = "^0.2.2"
sse-starlette = "^2.1.3"
pytest = "^8.3.2"
services-api = {path = "/common_packages/services_api", develop = true}
langchain = "^0.2.14"
langchain-community = "^0.2.12"
huggingface-hub = "^0.24.6"
fastapi = {extras = ["standard"], version = "^0.112.1"}
pydantic-settings = "^2.4.0"


[[tool.poetry.source]]
name = "llama-cpp-cuda-12.4"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
